[gd_scene load_steps=2 format=3 uid="uid://072a80habhhh"]

[ext_resource type="Script" uid="uid://f0r1yq5v1fe0" path="res://Utility/hit_hurt_box/hit_box_dot.gd" id="1_uhkn8"]

[node name="HitBoxDot" type="Area2D" groups=["attack"]]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_uhkn8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
